main.css | Ensure overflow wrapping for products description

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -125,6 +125,7 @@ h2 {
 }
 #product-gallery article p {
   font-size: 0.875rem;
+  overflow-wrap: break-word;
 }
 #product-gallery article figure img {
   aspect-ratio: 1 / 1;
